[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Dialogs/PreferencesDialog.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Roboto-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/CJK/NotoSansCJKtc-Regular.tres" type="DynamicFont" id=3]

[node name="PreferencesDialog" type="AcceptDialog"]
margin_right = 216.0
margin_bottom = 70.0
window_title = "Preferences"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_horizontal = 3
custom_constants/autohide = 0

[node name="Tree" type="Tree" parent="HSplitContainer"]
margin_right = 88.0
margin_bottom = 26.0
rect_min_size = Vector2( 88, 0 )
custom_constants/item_margin = -2
hide_root = true

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/ScrollContainer"]
margin_right = 306.0
margin_bottom = 960.0
size_flags_horizontal = 3

[node name="General" type="VBoxContainer" parent="HSplitContainer/ScrollContainer/VBoxContainer"]
margin_right = 205.0
margin_bottom = 84.0

[node name="General Options" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/General"]
margin_right = 205.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
text = "General Options"

[node name="SmoothZoom" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/General"]
margin_top = 32.0
margin_right = 205.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
pressed = true
text = "Smooth Zoom"

[node name="GridContainer" type="GridContainer" parent="HSplitContainer/ScrollContainer/VBoxContainer/General"]
margin_top = 60.0
margin_right = 205.0
margin_bottom = 84.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2

[node name="LeftIndicatorCheckbox" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/General/GridContainer"]
margin_right = 147.0
margin_bottom = 24.0
hint_tooltip = "Show left mouse pixel indicator or brush on the canvas when drawing"
mouse_default_cursor_shape = 2
pressed = true
text = "Left pixel indicator"

[node name="RightIndicatorCheckbox" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/General/GridContainer"]
margin_right = 147.0
margin_bottom = 24.0
hint_tooltip = "Show right mouse pixel indicator or brush on the canvas when drawing"
mouse_default_cursor_shape = 2
text = "Right pixel indicator"

[node name="LeftToolIconCheckbox" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/General/GridContainer"]
margin_right = 147.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
pressed = true
text = "Show left tool icon"

[node name="RightToolIconCheckbox" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/General/GridContainer"]
margin_right = 147.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
pressed = true
text = "Show right tool icon"

[node name="PressureSentivity" type="HBoxContainer" parent="HSplitContainer/ScrollContainer/VBoxContainer/General"]
visible = false
margin_top = 46.0
margin_right = 334.0
margin_bottom = 66.0

[node name="PressureSensitivityLabel" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/General/PressureSentivity"]
margin_top = 3.0
margin_right = 173.0
margin_bottom = 17.0
text = "Tablet pressure sensitivity:"

[node name="PressureSensitivityOptionButton" type="OptionButton" parent="HSplitContainer/ScrollContainer/VBoxContainer/General/PressureSentivity"]
margin_left = 177.0
margin_right = 334.0
margin_bottom = 20.0
text = "Affect Brush's Alpha"
items = [ "None", null, false, 0, null, "Affect Brush's Alpha", null, false, 1, null ]
selected = 1

[node name="Languages" type="VBoxContainer" parent="HSplitContainer/ScrollContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 205.0
margin_bottom = 512.0

[node name="Language Options" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_right = 205.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
text = "Language options"

[node name="System Language" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 32.0
margin_right = 205.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
pressed = true
text = "System Language"

[node name="German" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 60.0
margin_right = 205.0
margin_bottom = 84.0
mouse_default_cursor_shape = 2
text = "Deutsch [de]"

[node name="Greek" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 88.0
margin_right = 205.0
margin_bottom = 112.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "Ελληνικά [el]"

[node name="English" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 116.0
margin_right = 205.0
margin_bottom = 140.0
mouse_default_cursor_shape = 2
text = "English [en]"

[node name="Esperanto" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 144.0
margin_right = 205.0
margin_bottom = 168.0
mouse_default_cursor_shape = 2
text = "Esperanto [eo]"

[node name="Spanish" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 172.0
margin_right = 205.0
margin_bottom = 196.0
mouse_default_cursor_shape = 2
text = "Español [es]"

[node name="French" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 200.0
margin_right = 205.0
margin_bottom = 224.0
mouse_default_cursor_shape = 2
text = "Français [fr]"

[node name="Italian" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 228.0
margin_right = 205.0
margin_bottom = 252.0
mouse_default_cursor_shape = 2
text = "Italiano [it]"

[node name="Latvian" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 256.0
margin_right = 205.0
margin_bottom = 280.0
mouse_default_cursor_shape = 2
text = "Latvian [lv]"

[node name="Polish" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 284.0
margin_right = 205.0
margin_bottom = 308.0
mouse_default_cursor_shape = 2
text = "Polski [pl]"

[node name="Brazilian Portuguese" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 312.0
margin_right = 205.0
margin_bottom = 336.0
mouse_default_cursor_shape = 2
text = "Português Brasileiro [pt_BR]"

[node name="Russian" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 340.0
margin_right = 205.0
margin_bottom = 364.0
mouse_default_cursor_shape = 2
text = "Русский [ru]"

[node name="Chinese Simplified" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 368.0
margin_right = 205.0
margin_bottom = 394.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = "简体中文 [zh_CN]"

[node name="Chinese Traditional" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Languages"]
margin_top = 398.0
margin_right = 205.0
margin_bottom = 424.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = "繁體中文 [zh_TW]"

[node name="Themes" type="VBoxContainer" parent="HSplitContainer/ScrollContainer/VBoxContainer"]
margin_top = 516.0
margin_right = 205.0
margin_bottom = 684.0

[node name="Theme Options" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Themes"]
margin_right = 205.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
text = "Theme options"

[node name="Dark Theme" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Themes"]
margin_top = 32.0
margin_right = 205.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
text = "Dark"

[node name="Gray Theme" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Themes"]
margin_top = 60.0
margin_right = 205.0
margin_bottom = 84.0
mouse_default_cursor_shape = 2
text = "Gray"

[node name="Godot\'s Theme" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Themes"]
margin_top = 88.0
margin_right = 205.0
margin_bottom = 112.0
mouse_default_cursor_shape = 2
text = "Godot"

[node name="Gold Theme" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Themes"]
margin_top = 116.0
margin_right = 205.0
margin_bottom = 140.0
mouse_default_cursor_shape = 2
text = "Gold"

[node name="Light Theme" type="CheckBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Themes"]
margin_top = 144.0
margin_right = 205.0
margin_bottom = 168.0
mouse_default_cursor_shape = 2
text = "Light"

[node name="Grid&Guides" type="VBoxContainer" parent="HSplitContainer/ScrollContainer/VBoxContainer"]
margin_top = 688.0
margin_right = 205.0
margin_bottom = 820.0

[node name="GridOptionsLabel" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides"]
margin_right = 205.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
text = "Grid options"

[node name="GridOptions" type="GridContainer" parent="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides"]
margin_top = 32.0
margin_right = 205.0
margin_bottom = 132.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2

[node name="WidthLabel" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "Width:"

[node name="GridWidthValue" type="SpinBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions"]
margin_left = 82.0
margin_right = 156.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 16384.0
value = 1.0
suffix = "px"

[node name="Height" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions"]
margin_top = 33.0
margin_right = 78.0
margin_bottom = 47.0
text = "Height:"

[node name="GridHeightValue" type="SpinBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions"]
margin_left = 82.0
margin_top = 28.0
margin_right = 156.0
margin_bottom = 52.0
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 16384.0
value = 1.0
suffix = "px"

[node name="GridColorLabel" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions"]
margin_top = 59.0
margin_right = 78.0
margin_bottom = 73.0
text = "Color:"

[node name="GridColor" type="ColorPickerButton" parent="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions"]
margin_left = 82.0
margin_top = 56.0
margin_right = 156.0
margin_bottom = 76.0
rect_min_size = Vector2( 64, 20 )
mouse_default_cursor_shape = 2

[node name="GuideColorLabel" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions"]
margin_top = 83.0
margin_right = 78.0
margin_bottom = 97.0
text = "Guide color:"

[node name="GuideColor" type="ColorPickerButton" parent="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions"]
margin_left = 82.0
margin_top = 80.0
margin_right = 156.0
margin_bottom = 100.0
rect_min_size = Vector2( 64, 20 )
mouse_default_cursor_shape = 2
color = Color( 0.63, 0.13, 0.94, 1 )

[node name="Image" type="VBoxContainer" parent="HSplitContainer/ScrollContainer/VBoxContainer"]
margin_top = 824.0
margin_right = 205.0
margin_bottom = 932.0

[node name="ImageOptionsLabel" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Image"]
margin_right = 205.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
text = "Image Options"

[node name="ImageOptions" type="GridContainer" parent="HSplitContainer/ScrollContainer/VBoxContainer/Image"]
margin_top = 32.0
margin_right = 205.0
margin_bottom = 108.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2

[node name="DefaultWidthLabel" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Image/ImageOptions"]
margin_top = 5.0
margin_right = 110.0
margin_bottom = 19.0
text = "Default Width:"

[node name="ImageDefaultWidth" type="SpinBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Image/ImageOptions"]
margin_left = 114.0
margin_right = 188.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 16384.0
value = 32.0
suffix = "px"

[node name="DefaultHeightLabel" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Image/ImageOptions"]
margin_top = 33.0
margin_right = 110.0
margin_bottom = 47.0
text = "Default Height:"

[node name="ImageDefaultHeight" type="SpinBox" parent="HSplitContainer/ScrollContainer/VBoxContainer/Image/ImageOptions"]
margin_left = 114.0
margin_top = 28.0
margin_right = 188.0
margin_bottom = 52.0
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 16384.0
value = 32.0
suffix = "px"

[node name="DefaultFillColorLabel" type="Label" parent="HSplitContainer/ScrollContainer/VBoxContainer/Image/ImageOptions"]
margin_top = 59.0
margin_right = 110.0
margin_bottom = 73.0
text = "Default Fill Color:"

[node name="DefaultFillColor" type="ColorPickerButton" parent="HSplitContainer/ScrollContainer/VBoxContainer/Image/ImageOptions"]
margin_left = 114.0
margin_top = 56.0
margin_right = 188.0
margin_bottom = 76.0
rect_min_size = Vector2( 64, 20 )
mouse_default_cursor_shape = 2
color = Color( 0, 0, 0, 0 )
[connection signal="about_to_show" from="." to="." method="_on_PreferencesDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_PreferencesDialog_popup_hide"]
[connection signal="item_selected" from="HSplitContainer/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="pressed" from="HSplitContainer/ScrollContainer/VBoxContainer/General/SmoothZoom" to="." method="_on_SmoothZoom_pressed"]
[connection signal="toggled" from="HSplitContainer/ScrollContainer/VBoxContainer/General/GridContainer/LeftIndicatorCheckbox" to="." method="_on_LeftIndicatorCheckbox_toggled"]
[connection signal="toggled" from="HSplitContainer/ScrollContainer/VBoxContainer/General/GridContainer/RightIndicatorCheckbox" to="." method="_on_RightIndicatorCheckbox_toggled"]
[connection signal="toggled" from="HSplitContainer/ScrollContainer/VBoxContainer/General/GridContainer/LeftToolIconCheckbox" to="." method="_on_LeftToolIconCheckbox_toggled"]
[connection signal="toggled" from="HSplitContainer/ScrollContainer/VBoxContainer/General/GridContainer/RightToolIconCheckbox" to="." method="_on_RightToolIconCheckbox_toggled"]
[connection signal="item_selected" from="HSplitContainer/ScrollContainer/VBoxContainer/General/PressureSentivity/PressureSensitivityOptionButton" to="." method="_on_PressureSensitivityOptionButton_item_selected"]
[connection signal="value_changed" from="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions/GridWidthValue" to="." method="_on_GridWidthValue_value_changed"]
[connection signal="value_changed" from="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions/GridHeightValue" to="." method="_on_GridHeightValue_value_changed"]
[connection signal="color_changed" from="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions/GridColor" to="." method="_on_GridColor_color_changed"]
[connection signal="color_changed" from="HSplitContainer/ScrollContainer/VBoxContainer/Grid&Guides/GridOptions/GuideColor" to="." method="_on_GuideColor_color_changed"]
[connection signal="value_changed" from="HSplitContainer/ScrollContainer/VBoxContainer/Image/ImageOptions/ImageDefaultWidth" to="." method="_on_ImageDefaultWidth_value_changed"]
[connection signal="value_changed" from="HSplitContainer/ScrollContainer/VBoxContainer/Image/ImageOptions/ImageDefaultHeight" to="." method="_on_ImageDefaultHeight_value_changed"]
[connection signal="color_changed" from="HSplitContainer/ScrollContainer/VBoxContainer/Image/ImageOptions/DefaultFillColor" to="." method="_on_DefaultBackground_color_changed"]
